--- a/week03_ca/nbproject/private/private.properties
+++ b/week03_ca/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=/home/cmlee/.netbeans/8.2/config/GlassFishEE6/Properties/gfv31765765130.properties
+deploy.ant.properties.file=C:\\Users\\Kevin\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv3940770336.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/cmlee/Documents/py411domain
-j2ee.server.home=/opt/java/javaee/glassfish/glassfish
-j2ee.server.instance=[/opt/java/javaee/glassfish/glassfish:/home/cmlee/Documents/py411domain]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/opt/java/javaee/glassfish
-user.properties.file=/home/cmlee/.netbeans/8.2/build.properties
+j2ee.server.domain=C:/Users/Kevin/AppData/Roaming/NetBeans/8.1/config/GF_4.1.1/payaradomain
+j2ee.server.home=C:/Program Files/payara41/glassfish
+j2ee.server.instance=[C:\\Program Files\\payara41\\glassfish;C:\\Program Files\\payara41\\glassfish\\domains\\payaradomain]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/payara41
+user.properties.file=C:\\Users\\Kevin\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
